--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CountDownTimer</string>
+    <string name="app_name">FirstGame</string>
     <string name="secrettaboo">SECRET TABOO</string>
     <string name="startButton">Start to Play</string>
     <string name="team1">TEAM 1</string>
